refactored he javascript in the form checks

--- a/clients/templates/clients/corp_client_form.html
+++ b/clients/templates/clients/corp_client_form.html
@@ -1,4 +1,5 @@
 {% extends "layout/base.html" %}
+{% load static %}
 {% block title %} - {{ page_title }}{% endblock title %}
 {% block content %}
     <div class="right_col" role="main">
@@ -261,6 +262,7 @@
 {% endblock content %}
 
 {% block script %}
+<script src="{% static "js/utils.js" %}"></script>
 <script>
     document.addEventListener("DOMContentLoaded", function() {
         // Hide the div by default
@@ -268,25 +270,7 @@
         document.getElementById("mailing_address").style.display = "none";
         document.getElementById("political_details").style.display = "none";
     });
-
-    function toggleDivVisibility(checkbox, divId) {
-        var div = document.getElementById(divId);
-        if (checkbox.checked) {
-            div.style.display = "block";
-        } else {
-            div.style.display = "none";
-        }
-    }
-    
-    function toggleEleRequired(checkbox, eleId) {
-        var ele = document.getElementById(eleId);
-        if (checkbox.checked) {
-            ele.required = true;
-        } else {
-            ele.required = false;
-        }
-    }
-    
+        
     
     function add_id_entry() {
         console.log("clicked");
