--- a/clients/templates/clients/beneficiary_form.html
+++ b/clients/templates/clients/beneficiary_form.html
@@ -1,4 +1,5 @@
 {% extends "layout/base.html" %}
+{% load static %}
 {% block title %} - {{ page_title }}{% endblock title %}
 {% block content %}
     <div class="right_col" role="main">
@@ -246,20 +247,13 @@
 {% endblock content %}
 
 {% block script %}
+<script src="{% static "js/utils.js" %}"></script>
 <script>
     document.addEventListener("DOMContentLoaded", function() {
         // Hide the div by default
         document.getElementById("intermediary_info").style.display = "none";
     });
 
-    function toggleDivVisibility(checkbox, divId) {
-        var div = document.getElementById(divId);
-        if (checkbox.checked) {
-            div.style.display = "block";
-        } else {
-            div.style.display = "none";
-        }
-    }
     
 </script>
 {% endblock script %}
