--- a/transactions/templates/transactions/transactions_form.html
+++ b/transactions/templates/transactions/transactions_form.html
@@ -246,6 +246,7 @@
 
 
 {% block script %}
+<script src="{% static "js/utils.js" %}"></script>
 <script src="{% static "js/transactions.js" %}"></script>
 <script src="{% static "js/deal_review.js" %}"></script>
 {% endblock script %}
