--- a/clients/templates/clients/corp_client_form.html
+++ b/clients/templates/clients/corp_client_form.html
@@ -19,12 +19,12 @@
                                     <div class="row mb-2">
                                         <div class="col-4">
                                             <label>
-                                                <input type="checkbox" class="checkbox" onclick="toggleDivVisibility(this, 'legacy_id')"> <span>This is a Legacy Client</span> 
+                                                <input type="checkbox" id="legacy_id_chk" class="checkbox" onclick="toggleDivVisibility(this, 'legacy_id')" {% if formdata.legacy_id %}checked{% endif %}> <span>This is a Legacy Client</span> 
                                             </label>
                                         </div>
                                         <div class="col-8" id="legacy_id">
                                             <label for="legacy_id">Legacy ID </label>
-                                            <input type="text" class="form-control" name="legacy_id" />
+                                            <input type="text" value="{{ formdata.legacy_id|default_if_none:"" }}" class="form-control" name="legacy_id" />
                                         </div>
                                     </div>
 
@@ -116,11 +116,10 @@
                                     <div class="row mb-2">
                                         <div class="col g-1">
                                             <label>
-                                                <input type="checkbox" class="checkbox" onclick="toggleDivVisibility(this, 'mailing_address')"> <span>This Corporation has a different mailing address</span> 
+                                                <input type="checkbox" id="mailing_address_chk" class="checkbox" onclick="toggleDivVisibility(this, 'mailing_address')" {% if formdata.mailing_address %}checked{% endif %}> <span>This Corporation has a different mailing address</span> 
                                             </label>
                                         </div>
                                     </div>
-                                    
                                     <div id="mailing_address">
                                         <div class="row mb-2">
                                             <div class="col g-1">
@@ -266,9 +265,15 @@
 <script>
     document.addEventListener("DOMContentLoaded", function() {
         // Hide the div by default
-        document.getElementById("legacy_id").style.display = "none";
-        document.getElementById("mailing_address").style.display = "none";
-        document.getElementById("political_details").style.display = "none";
+        const toggle_divs = ["legacy_id", "mailing_address", "political_details"];
+        toggle_divs.forEach(divId => {
+            const div = document.getElementById(divId);
+            div.style.display = "none";
+        });
+        toggle_divs.forEach(divId => {
+            const checkbox = document.getElementById(divId + "_chk");
+            toggleDivVisibility(checkbox, divId);
+        });
     });
         
     
