--- a/core/templates/layout/sidebar.html
+++ b/core/templates/layout/sidebar.html
@@ -52,11 +52,11 @@
                         <li{% if page_title == "Identification Types" %} class="active"{% endif %}>
                             <a href="{% url "setup:list_identification_types" %}"> Identification Types </a>
                         </li>
-                        <li{% if page_title == "DFL Bank Accounts" %} class="active"{% endif %}>
-                            <a href="{% url "setup:list_bank_accounts" %}"> DFL Bank Accounts </a>
+                        <li{% if page_title == "DFL Local Bank Accounts" %} class="active"{% endif %}>
+                            <a href="{% url "setup:list_bank_accounts" %}">Local Bank Accounts </a>
                         </li>
                         <li{% if page_title == "DFL International Bank Accounts" %} class="active"{% endif %}>
-                            <a href="{% url "setup:list_international_accounts" %}"> DFL International Bank Accounts </a>
+                            <a href="{% url "setup:list_international_accounts" %}">Int'l Bank Accounts </a>
                         </li>
                     </ul>
                 </li>
